--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 16 14:58:21 CST 2016
-sdk.dir=/Users/zhangyang/Library/Android/sdk
+#Wed Apr 06 17:09:47 CST 2016
+sdk.dir=C\:\\AndroidSDK
